--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>MovieLibrary</description>
     <properties>
         <java.version>17</java.version>
+        <swagger.version>2.0.2</swagger.version>
     </properties>
     <dependencies>
         <dependency>
@@ -41,6 +42,11 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
     </dependencies>
 
